added static sections in app.jsx

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -558,8 +558,40 @@ video {
   --tw-contain-style:  ;
 }
 
+.relative{
+  position: relative;
+}
+
 .mt-4{
   margin-top: 1rem;
+}
+
+.w-full{
+  width: 100%;
+}
+
+.bg-pale-blue{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 246 255 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.pb-8{
+  padding-bottom: 2rem;
 }
 
 .text-center{
@@ -570,9 +602,76 @@ video {
   font-weight: 700;
 }
 
+.padding{
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+@media (min-width: 640px){
+  .padding{
+    padding-left: 4rem;
+    padding-right: 4rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+}
+
+.padding-x{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+@media (min-width: 640px){
+  .padding-x{
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+}
+
+.padding-t{
+  padding-top: 3rem;
+}
+
+@media (min-width: 640px){
+  .padding-t{
+    padding-top: 6rem;
+  }
+}
+
+.padding-b{
+  padding-bottom: 3rem;
+}
+
+@media (min-width: 640px){
+  .padding-b{
+    padding-bottom: 6rem;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+}
+
+@media (min-width: 640px){
+  .sm\:py-32{
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+}
+
+@media (min-width: 1440px){
+  .wide\:padding-r{
+    padding-right: 2rem;
+  }
+
+  @media (min-width: 640px){
+    .wide\:padding-r{
+      padding-right: 4rem;
+    }
+  }
 }
