--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -558,12 +558,49 @@ video {
   --tw-contain-style:  ;
 }
 
+.max-container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
 }
 
+.flex{
+  display: flex;
+}
+
+.hidden{
+  display: none;
+}
+
 .w-full{
   width: 100%;
+}
+
+.flex-1{
+  flex: 1 1 0%;
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.gap-16{
+  gap: 4rem;
 }
 
 .bg-black{
@@ -576,6 +613,11 @@ video {
   background-color: rgb(245 246 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .py-10{
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -586,8 +628,31 @@ video {
   padding-bottom: 4rem;
 }
 
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-8{
   padding-bottom: 2rem;
+}
+
+.font-montserrat{
+  font-family: Montserrat, sans-serif;
+}
+
+.text-lg{
+  font-size: 18px;
+  line-height: 21.94px;
+}
+
+.leading-normal{
+  line-height: 1.5;
+}
+
+.text-slate-gray{
+  --tw-text-opacity: 1;
+  color: rgb(109 109 109 / var(--tw-text-opacity));
 }
 
 .padding{
@@ -643,6 +708,16 @@ video {
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+}
+
+@media not all and (min-width: 1024px){
+  .max-lg\:block{
+    display: block;
+  }
+
+  .max-lg\:hidden{
+    display: none;
+  }
 }
 
 @media (min-width: 640px){
