--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -56,3 +56,34 @@
     @apply font-montserrat text-slate-gray text-lg leading-7;
   }
 }
+
+.header {
+  position: relative;
+}
+
+.fixed {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  max-width: 16rem; /* Adjust width as needed */
+  background-color: white;
+  z-index: 1000; /* Ensure it overlays other content */
+}
+
+.transition-transform {
+  transition: transform 0.3s ease-in-out;
+}
+
+.transform {
+  transform: translateX(100%);
+}
+
+.translate-x-0 {
+  transform: translateX(0);
+}
+
+.translate-x-full {
+  transform: translateX(100%);
+}
